--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Trading
-email: #### 
+title: Loïc Pérennou
+# email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Loïc's trading ideas.
+  Where I write about trading ideas.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+github_username:  lperennou
 
 # Build settings
 theme: minima
@@ -41,6 +41,7 @@ plugins:
 # their entries' file path in the `include:` list.
 #
 # exclude:
+  - _jupyter
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
